--- a/client/style/menu.styl
+++ b/client/style/menu.styl
@@ -3,10 +3,10 @@
 aside
   position fixed
   top 0
-  padding 25px 20px
   width 160px
   background #fff
   height 100%
+  overflow hidden
   h4
     margin-top 15px
     font-size 10px
@@ -30,3 +30,11 @@ aside
           color #00468C
         li a:hover
           color #D88F2A
+          
+          
+  .scroll
+    padding 25px 20px
+    height 100%
+    width 175px
+    overflow auto
+    
