--- a/views/docs/debug.dust
+++ b/views/docs/debug.dust
@@ -6,10 +6,8 @@ For this reason, you should **understand how coffeescript compiles into javascri
 
 ### On the server
 
-By default your server side responders, models, and collection objects will be compiled into `server/swell.js`.  When trouble arises, you should get the error, line number in that file and the callstack which lead to the issue. As with any application, it is critically important to **test all your responder methods** througly using a automation via programs such as [PhantomJS](http://phantomjs.org/) or [Selinium](http://docs.seleniumhq.org/)
+By default your server side responders, models, and collection objects will be compiled into `server/swell.js`.  When trouble arises, you should get the error, line number in that file and the callstack which lead to the issue. As with any application, it is critically important to **test all your responder methods** througly using automation via programs such as [PhantomJS](http://phantomjs.org/) or [Selinium](http://docs.seleniumhq.org/)
 
 ### On the client
 
 By default all your client side javascript will compile into a nice and readable file `public/app.js`. It's **often worth having this file open** during testing and debugging so that you can identify the line of code where the problem occured. Modern browsers also afford you the option of examining the call stack leading up to any uncaught errors. 
-
-
